fixed the overflow in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ section {
 	align-items: center;
 	width: 100%;
 	height: 80vh;
+	overflow: hidden;
 	
 }
 section .bg {
@@ -216,6 +217,7 @@ section .bg {
 	height: 100%;
 	object-fit: fill;
 	pointer-events: none;
+	overflow: hidden;
 }
 
 section .girl {
@@ -224,6 +226,7 @@ section .girl {
 	scale: 1;
 	pointer-events: none;
 	animation: animateGirl 15s linear infinite;
+	overflow: hidden;
 	
 }
 @keyframes animateGirl {
